# tophat-lifecycle-ai-analyst

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Payment_Economy_Alert_System.pptx  README.md  ai-analyst-reference.md  bigquery_agent.py  create_slides.py  example_queries.py  payment_alerts_deck.md  product_analyst_agent.py  pyproject.toml  requirements.txt  setup.sh  shared_tools.py
.claude/: settings.json
.github/: SECURITY.md
.knowledge/: .bootstrap_timestamp
agents/: INDEX.md  chart-maker.md  cohort-analysis.md  confound-scanner.md  coop-analyst.md  cross-verification.md  data-explorer.md  deck-creator.md  descriptive-analytics.md  experiment-analyzer.md  experiment-readout.md  feedback-synthesizer.md  google-doc-creator.md  google-doc-reviewer.md  google-slides-creator.md  google-slides-reviewer.md  hypothesis-sharpener.md  minigame-health-assessor.md  opportunity-sizer.md  overtime-trend.md  pipeline_state_schema.md  pipeline_summary_template.md  registry.yaml  root-cause-investigator.md  storytelling.md  validation.md  weekly-digest.md
docs/: theming.md
helpers/: INDEX.md  analytics_chart_style.mplstyle  audit_logger.py  chart_helpers.py  chart_palette.py  chart_style_guide.md  confidence_scoring.py  config_helpers.py  credential_sanitizer.py  cross_verification.py  data_quality_extras.py  deck_parser.py  gdoc_builder.py  gdoc_narrative_parser.py  google_auth_helpers.py  lineage_tracker.py  postgres_helpers.py  provenance_assembler.py  query_log.py  reproducibility.py  security_enforcer.py  security_validator.py  sql_validator.py  (+2 more)
(+210 files in other folders)
