[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-analyst"
version = "2.0.0"
description = "Claude Code-powered product analytics toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alireza Hamidi", email = "alireza.hamidi@scopely.com"},
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.24",
    "matplotlib>=3.6",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "duckdb>=0.9",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "python-pptx>=0.6.21",
    "lxml>=4.9",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "faker>=18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests as integration tests",
    "statistical: marks tests as statistical tests",
]

[tool.setuptools.packages.find]
include = ["helpers*"]
